@@ -38,9 +38,9 @@
 	// Default header
 		register_default_headers( array(
 			'boats' => array(
-				'url'           => get_template_directory_uri() . '/images/boats.jpg',
+				'url' => get_template_directory_uri() . '/images/boats.jpg',
 				'thumbnail_url' => get_template_directory_uri() . '/images/boats.jpg',
-				'description'   => __( 'Default header', 'darkelements' )
+				'description' => __( 'Default header', 'darkelements' )
 			)
 		) );
 
@@ -56,7 +56,7 @@
 	// This feature adds RSS feed links to html head 
 		add_theme_support( 'automatic-feed-links' );
 
-	// Switches default core markup for search form, comment form, and comments to output valid HTML5
+	// Switch default core markup for search form, comment form, comments and caption to output valid html5
 		add_theme_support( 'html5', array( 'search-form', 'comment-form', 'comment-list', 'caption' ) );
 
 	// Background color
